# Learning_Python

./: .env.example  .gitignore  README.md  SETUP_GUIDE.md  classes.py  interactive_demo.py  main.py  pyproject.toml  quick__steup.bat  reorganize-repo.bat  requirements.txt  tempCodeRunnerFile.py
01-fundamentals/: Python_Basics.py  README.md  __init__.py  functions_example.py  hello.py  interactive_demo.py  variables_example.py
02-data-structures/: README.md  __init__.py  dictionaries_example.py  lists_example.py  practice_exercises.py  sets_example.py  tuples_example.py
03-oop/: README.md  __init__.py  building.py  call.py  classes.py  student_class.py
04-modules-packages/: README.md  __init__.py
05-file-handling/: README.md  __init__.py  backup.py
06-error-handling/: README.md  __init__.py
07-data-analysis/: README.md  __init__.py
07-data-analysis/sales-analyzer/: data_loader.py  helpers.py
07-data-analysis/sales-analyzer/sales-analysis/: analyzer.py  data_loader.py  test_helpers.py
07-data-analysis/sales__analyzer/: analyzer.py  helpers.py  test_helpers.py  visualizer.py
07-data-analysis/sales__analyzer/data/: sales.csv
07-data-analysis/sales_analyzer/: analyzer.py  config.py  visualizer.py
08-apis/: README.md  __init__.py  currency_converter.py  get_game_data.py  inspect_scoreboard.py  nba_score.py
09-projects/: README.md  __init__.py  youtube_video_downloader.py
09-projects/_PROJECT_TEMPLATE/: README.md
09-projects/weather/weather/: weather.py
09-projects/weather/weather/data/: kathmandu_weather.csv
10-exercises/: README.md  __init__.py
10-exercises/Leetcode/: two__sum.py
10-exercises/practice/: random_number.py  rock_paper_scissors.py  wpm.py
notes/: best-practices.md  python-cheatsheet.md  resources.md
project/: choose_your_adventure.py  madibs_generator.py  password_manager.py  passwords.txt  path_finder.py  quiz_game.py  slot_machine.py  turtle__race.py
project/sales-analysis/: analyzer.py  config.py  helpers.py  visualizer.py
project/weather/: weather.py
project/weather/data/: weather_data.csv
scripts/: REORGANIZE.bat  commit_change.bat  create---example.bat  create_init_files.bat  lint.bat  new-topic.bat  run-test.bat
tests/: test_example.py
