# Create in root directory
cat > pyproject.toml << 'EOF'
[project]
name = "python-for-ai"
version = "0.1.0"
description = "Complete Python learning journey from fundamentals to AI"
authors = [
    {name = "Aashish Poudel", email = "poudelashish572@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Aashish-po/Learning_Python"
Repository = "https://github.com/Aashish-po/Learning_Python.git"

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "mypy>=1.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["venv", ".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
EOF